add auth and coinbase types
